k8s/manifests/app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-public
  labels:
    app: devops-app
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080  # This will be accessible on VM_PUBLIC_IP:30080
    protocol: TCP
    name: http
