k8s/manifests/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-public
  namespace: monitoring
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 32000  # This will be accessible on VM_PUBLIC_IP:32000
    protocol: TCP
    name: http
